# DeepDarkFantasy

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DeepDarkFantasy.cbp  DeepDarkFantasy.out  Makefile  cmake_install.cmake  main.cpp
creature/: Creature.h
events/: 0heal1mana.json  1heal0mana.json  1heal1mana.json  1heal2mana.json  2heal1mana.json  AxeTrap.json  ShrineOfAzhorra.json  hiddenFireGreataxe.json  hiddenGreataxe.json  offerFromTheDeep.json  rushingStream.json  sibirskiPlavacShrine.json
heroClasses/: barbarian.json  cleric.json  rogue.json  sorc.json
include/: Action.cpp  Action.h  ActionList.cpp  ActionList.h  Creature.cpp  Creature.h  Item.cpp  Item.h  ItemList.cpp  ItemList.h  cList.cpp  cList.h  combat.cpp  combat.h  event.cpp  event.h  functions.cpp  functions.h  interact.h  room.cpp  room.h  statusEffect.cpp  statusEffect.h
items_and_spells/: alchemistsFire.json  barbedDagger.json  bigSqueak.json  blackLotus.json  bloodRage.json  bozijaBatina.json  carefulStrike.json  chainMail.json  claws.json  cleave.json  commandingShout.json  corrodeMetal.json  coupDeGrace.json  cripplingRay.json  crowbar.json  cure_wounds.json  dagger.json  darkPact.json  darkmantleCrush.json  darknessAura.json  dragonRatBite.json  energyDrink.json  explodeyRatHeadbutt.json  fanOfKnives.json  fireGreataxe.json  fire_greatsword.json  fireball.json  fireballCHA.json  firebolt.json  fireboltCHA.json  frostNovaCHA.json  frostboltCHA.json  giantRatBite.json  greataxe.json  healingPotion.json  javelin.json  lightningBreath.json  longbow.json  magic_missle.json  manaPotion.json  (+26 more)
monsters/: IsusHrist.json  darkmantle.json  dragonRatBlue.json  explodeyRat.json  frescoSpirit.json  giantRat.json  goblin.json  grayOoze.json  kobold.json  laserRat.json  mimic.json  mimicLesser.json  nibbles.json  ratBearPig.json  ratKing.json  skeleton.json  spiderRat.json  squakerRat.json  swarmOfRats.json  twigBlight.json  violetFungus.json  wererat.json
rooms/: altarOfForbiddenPower.json  breedingChamber.json  caveEntrance.json  caveHallwayA.json  caveHallwayB.json  caveHallwayKL.json  cavernCrossroad.json  floodedTunnel.json  fungusRoom.json  laboratory.json  nTunnel.json  ratKingsBedroom.json  ratKingsTreasureRoom.json  (+7 more)
(+35 files in other folders)
